# flask-restfull-api

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  settings.toml
app/: __init__.py  extensions.py  models.py  routes.py  schemas.py
app/resources/: auth.py  letter.py
app/services/: mail.py
app/templates/mails/: forget-password.html  forget-password.txt  welcome.html  welcome.txt
migrations/versions/: 240ffccceb4c_.py  401b1cda4c73_.py  4f91b69d920e_.py  7fee63d7919b_.py  97dbd1856d11_.py  9ba126a8bb37_.py  c03d9de81c47_.py  c30b47d1034d_.py
tests/: conftest.py  test_auth.py  test_letter.py
